Simplify Vercel config

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Строка подключения к PostgreSQL
 # ВАЖНО: Замените YOUR_PASSWORD на ваш реальный пароль от PostgreSQL
-DATABASE_URL=postgresql://postgres:kolbaserbochkaBASS12345@localhost:5432/java_interview_tinder
+DATABASE_URL=postgresql://postgres:kolbaserbochhkaBASS12345@localhost:5432/java_interview_tinder
 
 # Токен бота (пока оставьте пустым)
 BOT_TOKEN=8220422658:AAGufIGGCTeZUmSQE6PgFfLRIistLp4sc-A
@@ -12,4 +12,4 @@ OPENROUTER_API_KEY=sk-or-v1-963da3dccfe02824924f81c616c41296c1802d02e3e0b5410996
 PORT=3000
 
 # Режим разработки
-NODE_ENV=development
+NODE_ENV=production
