--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Строка подключения к PostgreSQL
 # ВАЖНО: Замените YOUR_PASSWORD на ваш реальный пароль от PostgreSQL
-DATABASE_URL=postgresql://postgres:kolbaserbochhkaBASS12345@localhost:5432/java_interview_tinder
+DATABASE_URL=postgresql://postgres:kolbaserbochhkaBASS12345@db.mxqobvxszwjmdkwsackp.supabase.co:5432/postgres
 
 # Токен бота (пока оставьте пустым)
 BOT_TOKEN=8220422658:AAGufIGGCTeZUmSQE6PgFfLRIistLp4sc-A
