Skip hash validation

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Строка подключения к PostgreSQL
 # ВАЖНО: Замените YOUR_PASSWORD на ваш реальный пароль от PostgreSQL
-DATABASE_URL=postgresql://postgres:kolbaserbochhkaBASS12345@db.mxqobvxszwjmdkwsackp.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.mxqobvxszwjmdkwsackp:kolbaserbochhkaBASS12345@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
 
 # Токен бота (пока оставьте пустым)
 BOT_TOKEN=8220422658:AAGufIGGCTeZUmSQE6PgFfLRIistLp4sc-A
