--- a/backend/.env
+++ b/backend/.env
@@ -10,6 +10,6 @@ OPENROUTER_API_KEY=sk-or-v1-963da3dccfe02824924f81c616c41296c1802d02e3e0b5410996
 
 # Порт сервера
 PORT=3000
-OPENROUTER_MODEL=openrouter/free
+OPENROUTER_MODEL=qwen/qwen-3-235b-a22b-thinking:free
 # Режим разработки
 NODE_ENV=production
